--- a/auth.html
+++ b/auth.html
@@ -6,7 +6,6 @@
     
     <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
     <script>
-      // !!!! Replace with your own Firebase settings  !!!!!
       var config = {
     apiKey: "AIzaSyBg9ZsZ-6MwQqyV_-DoDmrzze16u6MbAwU",
     authDomain: "askarcell-5aef6.firebaseapp.com",
@@ -58,9 +57,10 @@
       });
     </script>
     <style>
-      .auth-wrapper {
+      .auth-wrapper, .page-header h1 {
          width:850px;
          margin-left: 5%;
+         color: #fff;
       }
     </style>
   </head>
