--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="icon" 
       type="image/png" 
-      href="@/favicon.ico">
+      href="../favicon.ico">
     <meta charset="utf-8">
     <title>Ask Arcell</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,7 +17,6 @@
     <div id="app"> <!-- route outlet -->
     	<router-view></router-view>
 	</div>
-
 
     <!-- built files will be auto injected -->
     <!-- <script src="dist/build.js"></script> -->
